// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalReducer LoadModal should set the error(s) to the state 1`] = `
Object {
  "currentModal": "none",
  "currentRoute": "someRoute",
}
`;

exports[`ModalReducer ResetModal should clear error(s) from the state 1`] = `
Object {
  "currentModal": "none",
  "currentRoute": "someUrl",
}
`;

exports[`ModalReducer when initialised should set the default state 1`] = `
Object {
  "currentModal": "none",
  "currentRoute": "",
}
`;
